--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
- 
 {
   "name": "nextjstemplate",
   "version": "0.1.0",
@@ -9,22 +8,24 @@
     "start": "next start"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.35",
-    "@fortawesome/free-brands-svg-icons": "^5.15.3",
-    "@fortawesome/free-regular-svg-icons": "^5.15.3",
-    "@fortawesome/free-solid-svg-icons": "^5.15.3",
-    "@fortawesome/react-fontawesome": "^0.1.14",
+    "@date-io/luxon": "1.x",
     "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
+    "@material-ui/pickers": "^3.3.10",
     "axios": "^0.21.1",
-    "next": "10.0.1",
-    "next-auth": "^3.0.1",
+    "luxon": "^1.26.0",
+    "next": "10.2.0",
+    "next-auth": "^3.19.3",
     "next-connect": "^0.10.1",
-    "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-to-pdf": "^0.0.13",
+    "react-to-print": "^2.12.4"
   },
   "devDependencies": {
-    "@types/node": "^14.14.35",
+    "@types/luxon": "^1.26.5",
+    "@types/node": "^15.0.1",
     "@types/react": "^17.0.3",
     "typescript": "^4.2.3"
   }
