--- a/package.json
+++ b/package.json
@@ -14,16 +14,17 @@
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@material-ui/pickers": "^3.3.10",
     "axios": "^0.21.1",
+    "lodash": "^4.17.21",
     "luxon": "^1.26.0",
     "next": "10.2.0",
     "next-auth": "^3.19.3",
     "next-connect": "^0.10.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-to-pdf": "^0.0.13",
     "react-to-print": "^2.12.4"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.169",
     "@types/luxon": "^1.26.5",
     "@types/node": "^15.0.1",
     "@types/react": "^17.0.3",
